tests/snapshots/browser_tests__elasticsearch_config.snap
---
source: tests/browser_tests.rs
expression: es_config
---
ElasticsearchConfig {
    host: Some(
        "http://localhost:9200",
    ),
    index: Some(
        "test-index",
    ),
}
