tests/snapshots/browser_tests__popup_state_downloading.snap
---
source: tests/browser_tests.rs
expression: downloading
---
Downloading(
    BackupMetadata {
        key: "test-snapshot-1.sql.gz",
        size: 10485760,
        last_modified: 1672574400.0,
    },
    0.5,
    1048576.0,
)
