tests/snapshots/browser_tests__qdrant_config.snap
---
source: tests/browser_tests.rs
expression: qdrant_config
---
QdrantConfig {
    host: Some(
        "http://localhost:6333",
    ),
    collection: Some(
        "test-collection",
    ),
    api_key: Some(
        "test-api-key",
    ),
}
