tests/snapshots/browser_tests__s3_config.snap
---
source: tests/browser_tests.rs
expression: s3_config
---
S3Config {
    bucket: "test-bucket",
    region: "us-west-2",
    prefix: "test-prefix",
    endpoint_url: "https://test-endpoint.com",
    access_key_id: "test-access-key",
    secret_access_key: "test-secret-key",
    path_style: false,
    error_message: None,
    test_s3_button: false,
}
